# thecoderapi

./: Dockerfile  install_telegram_user.py  pyproject.toml
app/: main.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: telegram_code.py  telegram_message.py
app/crud/: telegram_code.py  telegram_message.py
app/models/: __init__.py  telegram_message.py
config/: __init__.py
core/models/: model_field.py
install/: install_telegram_code.py  install_telegram_message.py  install_telegram_user.py  uninstall_telegram_code.py  uninstall_telegram_message.py  uninstall_telegram_user.py
install/actions/: x_telegram_code_action.py  x_telegram_message_action.py
install/menus/: thecoder_menu.py  x_telegram_code_menu.py  x_telegram_message_menu.py  x_telegram_user_menu.py
install/models/: x_telegram_code.py  x_telegram_message.py
install/views/: x_telegram_code_view.py  x_telegram_message_view.py
install/views/xml/: x_telegram_code_form.xml  x_telegram_code_tree.xml  x_telegram_message_form.xml  x_telegram_message_tree.xml
